# adler32fast-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: adler32.rs  adler32_benchmark.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: adler32.rs  adler32fast.rs  avx2.rs  ssse3.rs
src/: baseline.rs  lib.rs  specialized.rs  sse.rs
src/specialized/: avx2.rs  sse.rs  ssse3.rs
