[package]
name = "adler32fast"
version = "0.1.0"
authors = ["Zac Stringham <zlstringham@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"

[dev-dependencies]
adler32 = "1.2.0"
quickcheck = { version = "1.0.0", default-features = false }

[features]
default = ["std"]
std = []
